turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:12: error: ')' expected but 'if' found.
      if (rule(i) == 'R') {
      ^